--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Backend Data And State Management.md",
+            "file": "Backend Python.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Backend Data And State Management.md",
+                "file": "Backend Python.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,10 +89,11 @@
   },
   "active": "02ec506a7f831c97",
   "lastOpenFiles": [
+    "Backend Python.md",
     "Backend Data And State Management.md",
+    "Database Schema.md",
     "Entertainment_App_Components.svg",
     "Component Tree.md",
-    "Untitled.md",
     "HTML CSS.md",
     "Frontend.md"
   ]
